--- a/views/index.pug
+++ b/views/index.pug
@@ -29,13 +29,13 @@ block content
     
     div(class='row')
       div(class='col-md-12 text-center p-y-20')
-        script(type="text/javascript" src="http://code.altpubli.com/iwadserver.js")
+        script(type="text/javascript" src="https://code.altpubli.com/iwadserver.js")
         script(type='text/javascript').
-          url="http://code.altpubli.com/index.php?idcanal=2779&lgid="+((new Date()).getTime() % 2147483648) + Math.random();
+          url="https://code.altpubli.com/index.php?idcanal=2779&lgid="+((new Date()).getTime() % 2147483648) + Math.random();
           if (typeof iwadserverbanner == "function") iwadserverbanner(url, "");
         noscript
-          a(href='http://code.altpubli.com/click_noscript.php?idcanal=2779')
-            img(src='http://code.altpubli.com/index.php?idcanal=2779')
+          a(href='https://code.altpubli.com/click_noscript.php?idcanal=2779')
+            img(src='https://code.altpubli.com/index.php?idcanal=2779')
     div(id='posts')
       
 
