--- a/views/layout.pug
+++ b/views/layout.pug
@@ -48,6 +48,6 @@ html
 
     script(src='https://code.jquery.com/jquery-3.1.1.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
-    script(src='/assets/js/app.js')
+    script(src='/assets/js/script.js')
 
     block scripts
