--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,19 +32,11 @@ html
 
     script(src='/assets/js/analytics.js')
 
-    script(src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-    script(src='/assets/js/adsense.js')
-
+    script(type='text/javascript', src='https://code.iwadserver.com/iwadserver.js')
 
   body
     block content
 
-    footer(class='text-center p-y-20')
-      | #{lang.created_with_lots_of}
-      span(class='emoji') ❤️
-      | por
-      b #{lang._iglink_team}
-      | #{lang.copyright}
 
     script(src='https://code.jquery.com/jquery-3.1.1.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
