--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -713,6 +713,20 @@ h4{
   background-color:#fff;
   height:65px;
 }
+.footer-bar{
+  position: fixed;
+  bottom: 0px;
+  background-color: #fff;
+  width: 100%;
+  left: 0;
+  border-top:1px solid #e7e7e7;
+  height: 65px;
+  text-align:center;
+  padding:10px;
+}
+
+
+
 .full-wid{
   width:100%;
 }
@@ -796,6 +810,34 @@ h4{
   display: block;
 }
 
+.adblock{
+  background-color:#f4f4f4;
+  border-top:1px solid #e7e7e7;
+  border-bottom:1px solid #e7e7e7;
+  padding:10px 0px;
+  margin:5px 0px;
+}
+
+.postblock{
+  line-height:0px;
+}
+
+#afuera{
+  display:none;
+}
+
+.show-interstitials #afuera{
+  display:block;
+}
+#direct-links-panel{
+  display:none;
+  position: fixed;
+  height: 100%;
+  width:100%;
+  background-color:#fff;
+  z-index: 100;
+    
+}
 
 
 @-webkit-keyframes fadeIn { from { opacity:0; opacity: 1\9; /* IE9 only */ } to { opacity:1; } }
