--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -829,16 +829,26 @@ h4{
 .show-interstitials #afuera{
   display:block;
 }
+
 #direct-links-panel{
-  display:none;
+  *display:none;
   position: fixed;
   height: 100%;
   width:100%;
   background-color:#fff;
   z-index: 100;
-    
-}
+  bottom:0px;
 
+}
+.btn-outline{
+  border:1px solid #000;
+  padding:10px;
+  text-transform: uppercase;
+  border-radius: 0px;
+  color:#000;
+  font-weight: 600
+
+}
 
 @-webkit-keyframes fadeIn { from { opacity:0; opacity: 1\9; /* IE9 only */ } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; opacity: 1\9; /* IE9 only */ } to { opacity:1; } }
