--- a/views/index.pug
+++ b/views/index.pug
@@ -12,16 +12,14 @@ block content
   script
     | var brand = "#{brand}";
 
-  div(id='direct-links-panel' class='p-50 p-t-100')
-    div(class="m-b-20")
-      a(href='javascript:hideDirectLinks()' class='btn btn-block btn-outline') Links Instagram
-    div(class="m-b-20")
+  div(id='direct-links-panel' class='bg-instagram p-50 p-t-100')
+    div
+      a(href='javascript:hideDirectLinks()' class='btn btn-block btn-outline') Lorem ipsum dolor sit amet
+    div
+      a(href='javascript:hideDirectLinks()' class='btn btn-block btn-outline') Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+    div
       a(href='javascript:hideDirectLinks()' class='btn btn-block btn-outline') Ver más links
-    div(class="m-b-20")
-      a(href='javascript:hideDirectLinks()' class='btn btn-block btn-outline') Ver más links
-    div(class="m-b-20")
-      a(href='javascript:hideDirectLinks()' class='btn btn-block btn-outline') Ver más links
-    div(class="m-b-20")
+    div
       a(href='javascript:hideDirectLinks()' class='btn btn-block btn-outline') Ver más links
       
         
@@ -50,10 +48,11 @@ block content
       script(language='javascript' type='text/javascript' src ="https://ocio.leadzutw.com/inter_request.php?m=1J1DSITE83125X1&a=&img=1&lgid="+((new Date()).getTime() %2147483648) + Math.random())
 
 
-    div(id='posts' class='row')    
+    div(id='posts' class='row p-b-100')    
 
     footer(class='footer-bar')
-      a(href='javascript:showDirectLinks()' class='btn btn-outline') Links destacados
+      a(href='javascript:hideDirectLinks()' class='btn btn-outline btn-block')
+        | Ver Enlaces Instagram
     
     
 
