--- a/views/index.pug
+++ b/views/index.pug
@@ -44,7 +44,7 @@ block content
 
   div(class="tab-content")
     div(id="direct-links" class="tab-pane fade in active")
-      div(id='direct-links-panel' class='bg-instagram p-50 p-t-100')
+      div(id='direct-links-panel' class="p-20")
         div
           a(href='javascript:hideDirectLinks()' class='btn btn-block btn-outline') Lorem ipsum dolor sit amet
         div
