--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,7 +34,7 @@ html
 
     script(type='text/javascript', src='https://code.iwadserver.com/iwadserver.js')
 
-  body
+  body(class="bg-instagram")
     block content
 
 
