--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -832,7 +832,6 @@ h4{
 #direct-links-panel{
   height: 100%;
   width:100%;
-  background-color:#fff;
   z-index: 100;
   bottom:0px;
   overflow-x: auto;
@@ -891,6 +890,10 @@ h4{
 
 .tab-content{
   margin-top:106px;
+  min-height: 100%;
+}
+.tab-content .tab-pane{
+  min-height: 100%;
 }
 
 .bg-instagram {
