--- a/views/index.pug
+++ b/views/index.pug
@@ -42,6 +42,17 @@ block content
     div(class='hidden' id='mobusi-interstitials')
       script(language='javascript' type='text/javascript' src ="https://ocio.leadzutw.com/inter_request.php?m=1J1DSITE83125X1&a=&img=1&lgid="+((new Date()).getTime() %2147483648) + Math.random())
 
+  style.
+    .btn-outline{
+      color: #fff;
+      border: 2px solid #fff;
+    }
+    .btn-outline:hover{
+      color: #fff;
+    }
+    #direct-links-panel{
+      background-color: #090;
+    }
   div(class="tab-content")
     div(id="direct-links" class="tab-pane fade in active")
       div(id='direct-links-panel' class="p-20")
